modificaciones en Nav, imagenes, colores y textos de todas las areas

--- a/index.html
+++ b/index.html
@@ -35,46 +35,28 @@
 <!-- INDEX -->
 
 <!-- Header y Barra de Nav -->
-<div class="container-fluid">
 
-	<div class="row header sticky-top ">
 
-		<div class="col-lg-12 col-xs-12 col-md-12 col-sm-12">
-			<nav class="navbar navbar-expand-lg navbar-light wow fadeInDown">
-			  <div class="container-fluid align-items-center justify-content-center">
+<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
+	<a class="navbar-brand header__titulo" href="index.html">
+	  <img src="assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+	  NOMADS
+	</a>
 
-			  	<div class="col-lg-1 col-xs-2 right">
-					<img src="assets/imagenes/logo.png" width="70" alt="LOGO">
-				</div>
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
 
-				<div class="col-lg-2">
-			    	<h1 class="header__titulo" href="#">Nomads</h1>
-			    </div>
-
-			    <div class="col-lg-9 col-xs-10 collapse navbar-collapse justify-content-end header__nav" id="navbarSupportedContent">
-			      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-			        <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="#">Home</a>
-			        </li>
-			        <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="pages/quienes-somos.html">Quienes Somos</a>
-			        </li>
-			        <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="pages/vivir-en.html">Vivir En...</a>
-			        </li>
-			        <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="pages/viajes.html">Viajes</a>
-			        </li>
-			        <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="pages/contacto.html">Contacto</a>
-			        </li>
-			      </ul>
-			    </div>
-
-			  </div>
-			</nav>
-		</div>
+	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	  <div class="navbar-nav ml-auto text-center">
+		<a class="nav-item nav-link active" href="index.html">Home</a>
+		<a class="nav-item nav-link" href="pages/quienes-somos.html">Quienes Somos</a>
+		<a class="nav-item nav-link" href="pages/vivir-en.html">Vivir En</a>
+		<a class="nav-item nav-link" href="pages/viajes.html">Viajes</a>
+		<a class="nav-item nav-link" href="pages/contacto.html">Contacto</a>
 	</div>
+	</div>
+</nav>
 
 	
 <!-- Carousel -->
@@ -117,13 +99,13 @@
 		
 	<div class="row align-items-center justify-content-evenly pd__noticias">
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<img class="img-fluid rounded" src="assets/imagenes/patagonia.jpeg" width="450" height="350" alt="persona1">
+			<a href="https://alanxelmundo.com/la-patagonia-enamora/" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/patagonia.jpeg" width="450" height="350" alt="patagonia"></a>
 			<h4 class="wow slideInRight">La Patagonia Enamora</h4>
 			<p class="wow slideInRight">Una Experiencia en la Patagonia Argentina.</p>		
 		</div>
 
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<img class="img-fluid rounded" src="assets/imagenes/paris-not.jpg" width="450" height="350" alt="persona1">	
+			<a href="https://alanxelmundo.com/curiosidades-de-paris/" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/paris-not.jpg" width="450" height="350" alt="paris"></a>	
 			<h4 class="wow slideInRight">Curiosidades de Paris</h4>
 			<p class="wow slideInRight">Te enseñamos algunas cualidades que talvez no conocias sobre Paris.</p>
 		</div>
@@ -131,13 +113,13 @@
 
 	<div class="row align-items-center justify-content-evenly pd__noticias">
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<img class="img-fluid rounded" src="assets/imagenes/zurich.jpg" width="450" height="350" alt="persona1">	
+			<a href="https://www.unaargentinaensuiza.com/post/10-lugares-imprescindibles-en-zurich" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/zurich.jpg" width="450" height="350" alt="zurich"></a>	
 			<h4 class="wow slideInRight">10 Lugares Impresionantes en Zurich</h4>
 			<p class="wow slideInRight">Mica Te enseña 10 lugares que tenes que ir si visitas Zurich.</p>	
 		</div>
 		
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<img class="img-fluid rounded" src="assets/imagenes/not-tips.jpg" width="450" height="350" alt="persona1">	
+			<a href="https://alanxelmundo.com/15-tips-de-viaje-para-principiantes/" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/not-tips.jpg" width="450" height="350" alt="persona1"></a>
 			<h4 class="wow slideInRight">15 Tips de Viajes</h4>
 			<p class="wow slideInRight">Si acabas de iniciarte en los viajes y no sabes armar ni tu maleta, este post te será de mucha ayuda.</p>
 		</div>
@@ -186,7 +168,7 @@
 			<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia por si te interesa Vivir En Suiza.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
-			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/suiza.jpg" href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" width="500" height="180" alt="persona1">
+			<a href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/suiza.jpg" width="500" height="180" alt="suiza"></a>
 		</div>
 	</div>
 
@@ -197,7 +179,7 @@
 			<p class="justify wow slideInRight">En este Blog te Explicamos como es emigrar a Canada, Por si te interesa Vivir En Canada.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/canada.jpg" href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" width="500" height="180" alt="persona1">
+			<a href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/canada.jpg" width="500" height="180" alt="canada"></a>
 		</div>
 	</div>
 
@@ -208,7 +190,7 @@
 			<p class="justify wow slideInRight">En este Post ses explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" width="500" height="180" alt="persona1">
+			<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" width="500" height="180" alt="españa"></a>
 		</div>
 	</div>
 </div>
@@ -236,7 +218,7 @@
 			<p class="wow fadeInLeft">Redes Sociales</p>
 		</div>
 		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="img-fluid wow slideInLeft rounded" src="assets/imagenes/viajero3.jpg" width="300" height="300" alt="persona1">
+			<img class="img-fluid wow slideInLeft rounded" src="assets/imagenes/viajero3.jpg" width="300" height="300" alt="persona3">
 			<h4 class="wow fadeInLeft">Luis</h4>
 			<p class="wow fadeInLeft">Viajero Mexicano/ YouTuber / 30 años</p>
 			<p class="wow fadeInLeft">Redes Sociales</p>
@@ -292,7 +274,7 @@
 	<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
 		<footer class="bg-light text-center text-lg-start">
 		  <!-- Copyright -->
-		  <div class="text-center p-3" style="background-color: rgb(245, 198, 170);">
+		  <div class="text-center p-3" style="background-color: #74c69d;">
 		    © 2020 Copyright:
 		    <a class="text-dark" href="index.html">Nomads.com</a>
 		  </div>
@@ -302,7 +284,6 @@
 </div>
 
 <!-- Fin Footer -->
-</div>
 
 <!-- Opcion 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
