--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -33,45 +33,27 @@
 </head>
 <body>
 <!-- Header y Barra de Nav -->
-<div class="container-fluid">
-	<div class="row header sticky-top ">
 
-		<div class="col-lg-12">
-			<nav class="navbar navbar-expand-lg navbar-light wow fadeInDown">
-			  <div class="container-fluid align-items-center justify-content-center">
+<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
+	<a class="navbar-brand header__titulo" href="../index.html">
+	  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+	  NOMADS
+	</a>
 
-			  	<div class="col-lg-1 col-xs-2 col-sm-2 right">
-					<img src="../assets/imagenes/logo.png" width="70" alt="LOGO">
-				</div>
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
 
-				<div class="col-lg-2 col-sm-2 col-xs-2">
-				    <p class="header__titulo" href="#">NOMADS</p>
-				</div>
-
-				<div class="col-lg-9 col-xs-10 col-sm-10 collapse navbar-collapse justify-content-end header__nav" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				       <li class="nav-item">
-				         <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-				       </li>
-				       <li class="nav-item">
-				         <a class="nav-link active" aria-current="page" href="#">Quienes Somos</a>
-				       </li>
-				       <li class="nav-item">
-				         <a class="nav-link active" aria-current="page" href="vivir-en.html">Vivir En...</a>
-				       </li>
-				       <li class="nav-item">
-				         <a class="nav-link active" aria-current="page" href="viajes.html">Viajes</a>
-				       </li>
-				       <li class="nav-item">
-				         <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-				       </li>
-				    </ul>
-				</div>
-
-			  </div>
-			</nav>
-		</div>
+	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	  <div class="navbar-nav ml-auto text-center">
+		<a class="nav-item nav-link" href="../index.html">Home</a>
+		<a class="nav-item nav-link active" href="quienes-somos.html">Quienes Somos</a>
+		<a class="nav-item nav-link" href="vivir-en.html">Vivir En</a>
+		<a class="nav-item nav-link" href="viajes.html">Viajes</a>
+		<a class="nav-item nav-link" href="contacto.html">Contacto</a>
 	</div>
+	</div>
+</nav>
 
 	<!-- QUIENES SOMOS -->
 	<div class="container">
@@ -111,42 +93,28 @@
 		</div>
 	</div>
 
-	<!-- INTEGRANTES -->
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-				<h3 class="wow flipInX subtitulo__qs">Integrantes</h3>
-			</div>
+<!-- area -->
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h4 class="subrayado wow fadeInLeft">Creador</h4>
 		</div>
-		<div class="row">
-			<div class="col-lg-4 col-md-4 col-xs-6 col-sm-12 wow flipInX">
-				<img class="img-fluid rounded" src="../assets/imagenes/viajero1.jpg" width="300" height="350" alt="persona1">
-				<h4>Alan</h4>
-				<p>Viajero Mexicano / Actor / 40 Años</p>
-				<p>Redes Sociales</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-xs-6 col-sm-12 wow flipInX">
-				<img class="img-fluid rounded" src="../assets/imagenes/viajero2.jpg" width="300" height="350" alt="persona1">
-				<h4>Matias</h4>
-				<p>Viajero Argentino / Lic. Administracion / 21 Años</p>
-				<p>Redes Sociales</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-xs-6 col-sm-12 wow flipInX">
-			<img class="img-fluid rounded" src="../assets/imagenes/viajero3.jpg" width="300" height="350" alt="persona1">
-				<h4>Luis</h4>
-				<p>Viajero Mexicano / YouTuber / 30 Años</p>
-				<p>Redes Sociales</p>
-			</div>
+
+		<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft" src="../assets/imagenes/viajero2.jpg" alt="persona 2"></a>
 		</div>
-	</div>	
-	
+		<div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
+			<p>Me Llamo Matias, Soy un estudiante de Administracion y de Desarrollo Front-end, Este  es mi proyecto final en el cual intento implementar recursos que me han enseñado en el curso de CoderHouse espero que les guste!.</p>
+		</div>
+	</div>
+</div>
 
 <!-- Footer -->
 	<div class="row">
 		<div class="col-lg-12 col-xs-12 col-sm-12">
 			<footer class="bg-light text-center text-lg-start">
 			  <!-- Copyright -->
-			  <div class="text-center p-3" style="background-color: rgb(245, 198, 170);">
+			  <div class="text-center p-3" style="background-color: #74c69d;">
 			    © 2020 Copyright:
 			    <a class="text-dark" href="../index.html">Nomads.com</a>
 			  </div>
@@ -155,10 +123,10 @@
 		</div>
 	</div>
 
-</div>
+
 <!-- Opcion 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="../js/bootstrap.bundle.min.js"></script>
 
 <!-- JavaScripts WoW.js -->
 <script src="../js/wow.min.js"></script>
