--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -32,46 +32,29 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
+
 <!-- Header y Barra de Nav -->
-	<div class="container-fluid">
-		<div class="row header sticky-top">
 
-			<div class="col-lg-12 col-sm-12 col-md-12">
-				<nav class="navbar navbar-expand-lg navbar-light wow fadeInDown">
-				  <div class="container-fluid align-items-center justify-content-center">
+	<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
+		<a class="navbar-brand header__titulo" href="../index.html">
+		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+		  NOMADS
+		</a>
 
-				  	<div class="col-lg-1 col-xs-2 right">
-						<img src="../assets/imagenes/logo.png" width="70" alt="LOGO">
-					</div>
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-					<div class="col-lg-2">
-				    	<p class="header__titulo" href="#">NOMADS</p>
-				    </div>
- 
-				    <div class="col-lg-9 col-xs-10 collapse navbar-collapse justify-content-end header__nav" id="navbarSupportedContent">
-				      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="quienes-somos.html">Quienes Somos</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="vivir-en.html">Vivir En...</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="#">Viajes</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-				        </li>
-				      </ul>
-				    </div>
-
-				  </div>
-				</nav>
-			</div>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  <div class="navbar-nav ml-auto text-center">
+			<a class="nav-item nav-link" href="../index.html">Home</a>
+			<a class="nav-item nav-link" href="quienes-somos.html">Quienes Somos</a>
+			<a class="nav-item nav-link" href="vivir-en.html">Vivir En</a>
+			<a class="nav-item nav-link active" href="viajes.html">Viajes</a>
+			<a class="nav-item nav-link" href="contacto.html">Contacto</a>
 		</div>
+		</div>
+	</nav>
 
 <!--  VIAJES -->
 	<div class="row">
@@ -102,16 +85,16 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=96eDjU21GnE" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/nueva-york.png" width="500" height="180" alt="new york"></a>
+				<p>20 lugares que tenes que visitar en Nueva York.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=iI6zLJ9DJIk" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/japon.jpg" width="500" height="180" alt="japon"></a>
+				<p>5 Cosas Imperdibles De Japon.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a herf="https://www.youtube.com/watch?v=r1lqRWqwg10" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/bora-bora.jpg" width="500" height="180" alt="persona1"></a>
+				<p>Polinesia Bora-Bora VIP </p>
 			</div>
 		</div>
 
@@ -122,16 +105,16 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=RoaF7KBee7E" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/nueva-zelanda.jpeg" width="500" height="180" alt="new zeland"></a>
+				<p>QUEENSTOWN</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=vCIuNk6wHaI" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/universal.jpg" width="500" height="180" alt="universal"></a>
+				<p>UNIVERSAL STUDIOS</p> 
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.felicesvacaciones.es/blog/los-mejores-lugares-para-hacer-turismo-de-aventura" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/senderista.jpeg" width="500" height="180" alt="aventura"></a>
+				<p>Los mejores destinos para hacer Turismo aventura</p>
 			</div>
 		</div>
 
@@ -142,16 +125,16 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=tRXOrsul_t8" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/paris-not.jpg" width="500" height="180" alt="paris"></a>
+				<p>Paris, La ciudad del Amor</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=DvZ__Z3IHWk" target="blanck_"></a><img class="img-fluid wow slideInRight right" src="../assets/imagenes/nueva-york.png" width="500" height="180" alt="nueva-york"></a>
+				<p>La ciudad Mas linda</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=EUEujSP1MRA" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/argentina.jpg" width="500" height="180" alt="argentina"></a>
+				<p>Buenos Aires, Argentina</p>
 			</div>
 		</div>
 
@@ -162,39 +145,18 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=d1jYUWJvrmo" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/disney.jpg" width="500" height="180" alt="disney"></a>
+				<p>DISNEY</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a herf="https://www.etapainfantil.com/vacaciones-ninos-mundo" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/familia.jpg" width="500" height="180" alt="persona1"></a>
+				<p>Destinos Para La Familia</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
+				<a href="https://www.youtube.com/watch?v=34awyPkfzcU" target="blanck_"><img class="img-fluid wow slideInRight right" src="../assets/imagenes/paris.jpg" width="500" height="180" alt="paris"></a>
+				<p>DISNEY Paris</p>
 			</div>
 		</div>
-
-		<!-- Extras -->
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subtitulo__viajes">
-				<h4>Extras</h4>
-			</div>
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-				<p>NOTICIA</p>
-			</div>
-		</div>
-
 	</div>
 
 	<!-- Footer -->
@@ -202,7 +164,7 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<footer class="bg-light text-center text-lg-start">
 		  <!-- Copyright -->
-		  <div class="text-center p-3" style="background-color: rgb(245, 198, 170);">
+		  <div class="text-center p-3" style="background-color: #74c69d;">
 		    © 2020 Copyright:
 		    <a class="text-dark" href="../index.html">Nomads.com</a>
 		  </div>
@@ -211,10 +173,10 @@
 	</div>
 </div>
 
-</div>
+
 <!-- Opcion 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="../js/bootstrap.bundle.min.js"></script>
 
 <!-- JavaScripts WoW.js -->
 <script src="../js/wow.min.js"></script>
