--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,46 +32,29 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
-<!-- Header y Barra de Nav -->
-	<div class="container-fluid">
-		<div class="row header sticky-top">
 
-			<div class="col-lg-12 col-md-12 col-sm-12">
-				<nav class="navbar navbar-expand-lg navbar-light wow fadeInDown">
-				  <div class="container-fluid align-items-center justify-content-center">
+	<!-- Header y Barra de Nav -->
 
-				  	<div class="col-lg-1 col-xs-2 right">
-						<img src="../assets/imagenes/logo.png" width="70" alt="LOGO">
-					</div>
+	<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
+		<a class="navbar-brand header__titulo" href="../index.html">
+		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+		  NOMADS
+		</a>
 
-					<div class="col-lg-2">
-				    	<p class="header__titulo" href="#">NOMADS</p>
-				    </div>
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-				    <div class="col-lg-9 col-xs-10 collapse navbar-collapse justify-content-end header__nav" id="navbarSupportedContent">
-				      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="quienes-somos.html">Quienes Somos</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="vivir-en.html">Vivir En...</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="viajes.html">Viajes</a>
-				        </li>
-				        <li class="nav-item">
-				          <a class="nav-link active" aria-current="page" href="#">Contacto</a>
-				        </li>
-				      </ul>
-				    </div>
-
-				  </div>
-				</nav>
-			</div>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  <div class="navbar-nav ml-auto text-center">
+			<a class="nav-item nav-link" href="../index.html">Home</a>
+			<a class="nav-item nav-link" href="quienes-somos.html">Quienes Somos</a>
+			<a class="nav-item nav-link" href="vivir-en.html">Vivir En</a>
+			<a class="nav-item nav-link" href="viajes.html">Viajes</a>
+			<a class="nav-item nav-link active" href="contacto.html">Contacto</a>
 		</div>
+		</div>
+	</nav>
 
 <!-- CONTACTO -->
 <div class="row">
@@ -119,7 +102,7 @@
 	<div class="col-lg-12 col-xs-12 col-md-12 col-sm-12">
 		<footer class="bg-light text-center text-lg-start">
 		  <!-- Copyright -->
-		  <div class="text-center p-3" style="background-color: rgb(245, 198, 170);">
+		  <div class="text-center p-3" style="background-color: #74c69d;">
 		    © 2020 Copyright:
 		    <a class="text-dark" href="../index.html">Nomads.com</a>
 		  </div>
@@ -128,10 +111,9 @@
 	</div>
 </div>
 
-</div>
 <!-- Opcion 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="../js/bootstrap.bundle.min.js"></script>
 
 <!-- JavaScripts WoW.js -->
 <script src="../js/wow.min.js"></script>
