cambios en bordes de imagenes

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -101,7 +101,7 @@
 		</div>
 
 		<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft" src="../assets/imagenes/viajero2.jpg" alt="persona 2"></a>
+				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" alt="persona 2"></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
 			<p>Me Llamo Matias, Soy un estudiante de Administracion y de Desarrollo Front-end, Este  es mi proyecto final en el cual intento implementar recursos que me han enseñado en el curso de CoderHouse espero que les guste!.</p>
